// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateFormat Should render correctly 1`] = `
<div>
  <span
    class="sc-bgqQcB"
  >
    08/05/2023
  </span>
</div>
`;

exports[`DateFormat Should render correctly with options 1`] = `
<div>
  <span
    class="sc-bgqQcB"
  >
    Monday, 8 May 2023 at 23:00:17 GMT+10
  </span>
</div>
`;
